lab3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab3-service
spec:
  selector:
    app: lab3-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
